Atividade 06 corrigida